Fix cookie consent styling on mobile

--- a/app/styles/cookie-consent.scss
+++ b/app/styles/cookie-consent.scss
@@ -1,5 +1,5 @@
 .cc {
-  &-banner {
+  &-window {
     background-color: black;
     bottom: 0;
     color: white;
